# parallel-pc

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml
docs/: main.tex
ppc/: __init__.py  engine.py  graph.py  metrics.py  search.py  types.py  utils.py
scripts/: benchmark.py  fashion_search.py  mnist.py  patch_search.py  search.py  search_utils.py
